tweak edit welcome to alignment, temp fix for layout visualization

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ body {
 }
 
 #edit-welcome {
-  font-size: 75px;
+  font-size: 45px;
 }
 
 #edit-logo {
